# Clawith

./: .env.example  .gitignore  .mcp.json  AGENTS.md  AGENT_API_EXTERNAL_INTERFACE_DOC.md  ARCHITECTURE_SPEC_EN.md  CODEX_PASTE_PROMPT.md  CUSTOM_MODIFICATIONS.md  DEPLOY-PROD.md  GWS_SETUP_GUIDE.md  PROJECT_MANAGEMENT_SPEC.md  PR_DESCRIPTION.md  README.md  README_zh-CN.md  RELEASE_NOTES.md  SAAS_REFACTOR_ANALYSIS.md  SECURITY_ISSUE_USERNAME_COLLISION.md  USER_ISOLATION_COMPLETE.md  USER_ISOLATION_IMPLEMENTATION.md  USER_WORKSPACE_ISOLATION_PLAN.md  check_duplicates.py  compare_i18n.py  create_agent.py  dingtalk-channel-analysis.md  docker-compose.bundles.yml  docker-compose.ci.yml  docker-compose.role-all.yml  docker-compose.test.yml  docker-compose.yml  i18n_update_report.md  links.bat  migrate_user_workspaces.py  restart.sh  setup.sh  stop.sh  test_codex_oauth.sh  test_user_isolation.py
.github/: drone.yml  pull_request_template.md
.qwen/: settings.json
THIRD_PARTY_NOTICES/: agency-agents-MIT.txt
agent-inbox/: task-current.md  task-queue.md
agent-outbox/: codex-report.md  error-report.md  execution-log.md  next-actions.md
backend/: ALEMBIC_GUIDELINES.md  Dockerfile  entrypoint.sh  pyproject.toml  test_sandbox_config.py
bridge/: pyproject.toml
clawith_mcp/: README.md  pyproject.toml  server.py
deploy/: RELEASE_DEPLOYMENT.md  deploy-all-in-one.sh  docker-compose-multi.yml  docker-compose.yml
docs/: chatgpt-codex-workflow.md  codex-desktop-operating-rules.md  unified-runtime-group-chat-e2e-test-cases.md
frontend/: Dockerfile  index.html  nginx.conf  (+4 more)
(+650 files in other folders)
